# pyprobe

./: .ci-version  .coverage  .gitconfig  .gitignore  .proj2mdignore  AGENT.md  CLAUDE.md  CONSTITUTION.md  Dockerfile.test  Makefile  Makefile.docker  README.md  build_unified.py  check_grid.py  check_grid2.py  gemini.md  gui_profile.html  gui_profile.json  log.txt  notes.md  pixel_test.py  pyprobe.spec  pyproject.toml  release.sh  reproduce_issue.py  reproduce_marker_issue.py  requirements.txt  run_tests.py  take_screenshot.py  test_axis_replace.py  test_axis_z.py  test_complex.py  test_complex_type.py  test_curve_z.py  test_custom_axis.py  test_custom_axis_grid.py  test_custom_axis_link.py  test_fft_lens.py  test_grid.py  test_grid_items.py  (+7 more)
.agent/: AGENTS.md  BACKLOG.md  BUGS.md  DEBUG-DRAG-DROP-OVERLAY.md  FEATURES.md  README.md
.claude/: settings.local.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docker/: Dockerfile  build.Dockerfile  ci.Dockerfile  test.Dockerfile
docs/: bug_progress_report.md  bug_report_brainstorming_evolution.md  bug_report_flaky_gui_test_segfault.md  bug_report_implementation.md  ci_debug_report.md  feat_downsampling.md  interaction_taxonomy.md  keyboard_interaction_taxonomy.md  plot_elements.md
examples/: array_collection_demo.py  capture_drag.py  convergence_test.py  dsp_demo.py  interaction_discovery.py  interaction_discovery_hook.py  multirow_demo.py  plot_waveform.py  probe_various_data_types.py  pulse-duo-binary-soqpsk.py  pulse-eqz.py  soqpsk-eqz-pulse.py  soqpsk-eqz-reg.py  standalone_interaction_discovery.py  waveform_collection_demo.py  waveform_demo.py
plans/: gemini.md  m1-brutal-teardown.md  markermilestones.md  plan.md  vision.md
prof/: combined.prof  test_clear_all_probes_cleans_everything.prof  test_control_bar_open_menu_signals.prof  test_deeply_nested_folder.prof  test_empty_folder.prof  test_file_deleted_while_selected.prof  test_file_modified_externally_while_in_tree.prof  test_file_switch_clears_old_probes.prof  test_file_switch_during_execution_not_crash.prof  test_file_switch_restores_probes_from_sidecar.prof  test_file_switch_saves_sidecar.prof  test_file_tree_click_loads_script.prof  test_file_tree_hidden_on_startup.prof  test_file_tree_hidden_when_opening_single_file.prof  test_file_tree_highlight_tracks_selection.prof  test_file_tree_shown_on_folder_load.prof  test_file_tree_shows_only_py_files.prof  test_folder_with_no_py_files.prof  test_folder_with_pycache.prof  test_large_folder.prof  test_new_file_created_in_folder.prof  test_open_file_dialog_starts_in_folder.prof  test_open_folder_clears_previous_folder.prof  test_rapid_file_switching.prof  test_reselect_same_file_no_op.prof  test_run_target_follows_current_file_in_folder_mode.prof  test_run_target_stays_fixed_in_script_mode.prof  test_sidecar_not_created_if_no_probes.prof  test_sidecar_roundtrip_across_files.prof  test_splitter_layout_contract.prof  test_watch_scalars_cleared_on_file_switch.prof  test_watch_toggle_affects_correct_pane.prof
prompts/: CAPTURE-REDESIGN.md  END.md  FIND-REFACTOR-TARGETS.md  GAURDIAN.md  PROBLEM-SOLVING-LESSONS.md  SESSION-START.md  START.md  STRUCTURED-DEBUG.md  UPDATE-LESSONS.md
pyprobe/: __init__.py  __main__.py  logging.py  state_tracer.py
pyprobe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+526 files in other folders)
