[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprobe"
version = "0.1.0"
description = "Variable probing based debugger for Python DSP debugging"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "PyProbe Contributors"}
]
keywords = ["dsp", "debugging", "visualization", "probe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "PyQt6>=6.4.0",
    "pyqtgraph>=0.13.0",
    "numpy>=1.24.0",
    "pytest>=9.0.2",
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
    "pytest-qt>=4.5.0",
    "pytest-xdist>=3.8.0",
    "pytest-forked>=1.6.0",
    "pyplan",
]

[project.scripts]
pyprobe = "pyprobe.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyprobe*"]

[tool.uv.sources]
pyplan = { git = "https://github.com/inpalpra/pyplan.git", rev = "main" }
