[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprobe-plots"
version = "0.1.32"
description = "Variable probing based debugger for Python DSP debugging"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "PyProbe Contributors"}
]
keywords = ["dsp", "debugging", "visualization", "probe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "PyQt6>=6.4.0",
    "pyqtgraph>=0.13.0",
    "numpy>=1.24.0",
    "pytest>=9.0.2",
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
    "pytest-qt>=4.5.0",
    "pytest-xdist>=3.8.0",
    "pytest-forked>=1.6.0",
    "jsonschema>=4.26.0",
    "pytest-json-report>=1.5.0",
    "pytest-profiling>=1.8.1",
    "pytest-html>=4.2.0",
]

[project.scripts]
pyprobe = "pyprobe.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]
rfutil = [
    "rfutil",
]

[dependency-groups]
dev = [
    "pytest-qt>=4.5.0",
]
planning = [
    "pyplan",
]

[tool.setuptools.package-data]
"pyprobe.gui" = ["icons/*.svg"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyprobe*"]

[tool.uv.sources]
pyplan = { git = "https://github.com/inpalpra/pyplan.git", rev = "main" }
rfutil = { git = "https://github.com/inpalpra/rfutil" }

[tool.pytest.ini_options]
markers = [
    "performance: performance-sensitive tests"
]
